# Chess-Engine-Rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Chess-Engine-Publishing-Guide.md  HOW-IT-WORKS.md  LICENSE.md  README.md  README.md.backup  comprehensive_test.sh  test_basic_usage.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
crates/chess-core/: Cargo.toml
crates/chess-core/benches/: evaluation.rs  move_generation.rs  search.rs
crates/chess-core/src/: error.rs  lib.rs
crates/chess-core/src/board/: bitboard.rs  mod.rs  position.rs  square.rs
crates/chess-core/src/evaluation/: advanced.rs  mod.rs  standard.rs
crates/chess-core/src/game/: mod.rs  rules.rs  state.rs
crates/chess-core/src/moves/: magic.rs  mod.rs  move_gen.rs  validation.rs
crates/chess-core/src/pieces/: color.rs  mod.rs  piece.rs
crates/chess-core/src/search/: engine.rs  mod.rs  parallel.rs
crates/chess-core/src/utils/: memory.rs  mod.rs  simd.rs  zobrist.rs
crates/chess-core/tests/: chess_rules.rs  evaluation_regression_tests.rs  fen_parser_tests.rs  integration.rs  performance.rs
crates/chess-engine/: Cargo.toml
crates/chess-engine/examples/: basic_tactics.rs  basic_usage.rs  debug_components.rs  debug_evaluation.rs  debug_piece_values.rs  investigate_bishop_knight.rs  restructured_demo.rs  simple_eval_test.rs  test_evaluation_fix.rs  test_fen_loading.rs
crates/chess-engine/src/: builder.rs  engine.rs  error.rs  event.rs  lib.rs
crates/chess-engine/tests/: engine_integration_tests.rs
crates/chess-ffi/: Cargo.toml
crates/chess-ffi/src/: lib.rs
crates/chess-jni/: Cargo.toml
crates/chess-jni/src/: lib.rs
docs/: architecture.md
docs/platform-guides/: ANDROID_INTEGRATION.md  IOS_INTEGRATION.md  JAVASCRIPT_INTEGRATION.md  JAVA_KOTLIN_INTEGRATION.md  PYTHON_BINDINGS.md  RUST_SETUP.md
examples/: basic_tactics.rs  basic_usage.rs  restructured_demo.rs
scripts/: README.md  ci  quick-check.sh  run-benchmarks.sh  run-ci-locally.sh  test-all.sh
tests/: chess_rules.rs  integration.rs  performance.rs
tools/: debug_eval.rs  debug_simd.rs
