[workspace]
members = [
    "crates/chess-core",
    "crates/chess-engine",
    "crates/chess-ffi",
    "crates/chess-jni",
    "benchmarks",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chess Engine Team <chess-engine@example.com>"]
license = "MIT"
description = "A high-performance, tournament-grade chess engine implemented in Rust with multi-platform bindings"
keywords = ["chess", "engine", "game", "ai", "search"]
categories = ["games", "algorithms", "api-bindings"]
repository = "https://github.com/chess-engine-team/chess-engine-rust"
homepage = "https://chess-engine-team.github.io/chess-engine-rust"
documentation = "https://docs.rs/chess-engine-rust"
readme = "README.md"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = "1.11"
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace-level configuration
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1