[package]
name = "chess-ffi"
version.workspace = true
edition.workspace = true
description = "C FFI bindings for the chess engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "chess_ffi"

[features]
default = []
python = ["pyo3"]

[dependencies]
chess-engine = { path = "../chess-engine" }
chess-core = { path = "../chess-core" }

[dependencies.pyo3]
version = "0.26"
features = ["abi3-py38"]
optional = true
