[package]
name = "chess-ffi"
version.workspace = true
edition.workspace = true
description = "C FFI bindings for the chess engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "chess_ffi"

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]

[dependencies]
chess-engine = { path = "../chess-engine" }
chess-core = { path = "../chess-core" }

[dependencies.pyo3]
version = "0.26"
features = ["abi3-py38"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
